# easyeda2kicad.py

./: .pre-commit-config.yaml  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml
easyeda2kicad/easyeda/: easyeda_api.py  easyeda_importer.py  parameters_easyeda.py  svg_path_parser.py
easyeda2kicad/kicad/: export_kicad_footprint.py  parameters_kicad_footprint.py  parameters_kicad_symbol.py
